Cart drawer spacing issue fixes

--- a/assets/cart-drawer.css
+++ b/assets/cart-drawer.css
@@ -190,7 +190,7 @@
     .subtotal__content-wrap {
         display: unset;
     }
-    .subtotal__content {
+    .subtotal .subtotal__content {
         flex-flow: row;
         align-items: center;
         padding: 2.4rem 2.4rem 1.2rem;
